--- a/materiales/templates/components/modificacion_materiales/modificacion_editar_material.html
+++ b/materiales/templates/components/modificacion_materiales/modificacion_editar_material.html
@@ -42,7 +42,7 @@
             </div>
             
             <div class="row mb-1">
-                <label for="cdu" class="col-sm-3 col-form-label required">Clasificación / CDU</label>
+                <label for="cdu" class="col-sm-3 col-form-label required">CDU</label>
                 <div class="col-sm-9">
                     <input type="text" class="form-control" id="cdu" name="cdu" value="371.13" required>
                 </div>
