--- a/materiales/templates/materiales/formularios_editar/editar_libro.html
+++ b/materiales/templates/materiales/formularios_editar/editar_libro.html
@@ -407,9 +407,9 @@
                     {{ form.editorial }}
                 </div>
 
-                <!-- Clasificación / CDU -->
+                <!-- CDU -->
                 <div class="form-group">
-                    <label for="{{ form.clasificacion_cdu.id_for_label }}">Clasificación / CDU</label>
+                    <label for="{{ form.clasificacion_cdu.id_for_label }}">CDU</label>
                     {{ form.clasificacion_cdu }}
                 </div>
 
